--- a/src/app/authentication/containers/login-container/login-container.component.html
+++ b/src/app/authentication/containers/login-container/login-container.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="group" (ngSubmit)="onSubmitHandler()">
-  <div class="form-group">
+  <div class="form-group" soControlErrorContainer>
     <label for="email">Email</label>
     <input class="form-control"
            type="email"
@@ -7,7 +7,7 @@
            id="email"
            formControlName="email">
   </div>
-  <div class="form-group">
+  <div class="form-group" soControlErrorContainer>
     <label for="password">Password</label>
     <input class="form-control"
            type="email"
