--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<!--Вынести навигацию в отдельный модуль-->
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/">Search</a>
-  <a class="navbar-brand"
-       (click)="logoutClickHandler()">
-    Log out
-  </a>
-</nav>
+<so-navigation-container></so-navigation-container>
 <div [@routeAnimations]="o && o.activatedRouteData && o.activatedRouteData['animation']">
   <router-outlet #o="outlet"></router-outlet>
 </div>
