feat(): add db connection

--- a/apps/stackoverflow/src/app/navigation/containers/navigation-container/navigation-container.component.html
+++ b/apps/stackoverflow/src/app/navigation/containers/navigation-container/navigation-container.component.html
@@ -6,6 +6,7 @@
        (click)="logoutClickHandler()">
       Log out
     </a>
+    <a [routerLink]="routes">Navigate</a>
   </ng-container>
 
 </nav>
