--- a/apps/stackoverflow/src/app/search/containers/search-panel-container/search-panel-container.component.html
+++ b/apps/stackoverflow/src/app/search/containers/search-panel-container/search-panel-container.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row mt-5">
     <div class="col-sm col-md-8 offset-md-2">
-      <img src="../../../../assets/logo.png" class="w-100">
+      <img src="/assets/logo.png" class="w-100">
       <form [formGroup]="formGroup"
             (ngSubmit)="onSubmitHandler()"
             class="form-group search-container">
@@ -10,7 +10,7 @@
                formControlName="search"
                placeholder="Search...">
         <button type="submit" class="btn btn-primary btn-submit">
-          <img src="../../../../assets/search.png">
+          <img src="/assets/search.png">
         </button>
       </form>
     </div>
